clang/test/BSC/Negative/NullabilityCheck/while_stmt.cbs
// RUN: %clang_cc1 -verify %s

_Safe int *_Borrow _Nullable get_random_ptr(int* _Borrow p);
_Safe void test1(void) {
    int a = 10;
    int *_Borrow _Nullable p = nullptr;
    while (p == nullptr) {
        p = get_random_ptr(&_Mut a);
    }
    *p = 20;
}

_Safe void test2(void) {
    int a = 10;
    int *_Borrow _Nullable p = get_random_ptr(&_Mut a);
    while (p != nullptr) {
        *p = 10;
        p = get_random_ptr(&_Mut a);
    }
    *p = 20;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test3(void) {
    int a = 10;
    int *_Borrow _Nullable p = get_random_ptr(&_Mut a);
    if (p != nullptr) {
        do {
            *p = 10;
            p = get_random_ptr(&_Mut a);
        } while (p != nullptr);
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
}

_Safe void test4(void) {
    int a = 10;
    int b = 10;
    int *_Borrow _Nullable p = nullptr;
    int *_Borrow _Nullable q = nullptr;
    while (p == nullptr || q == nullptr) {
        p = get_random_ptr(&_Mut a);
        q = get_random_ptr(&_Mut b);
    }
    *p = 20;
    *q = 20;
}

_Safe void test5(void) {
    int a = 10;
    int *_Borrow _Nullable p = nullptr;
    int *_Borrow _Nullable q = nullptr;
    while (p != nullptr && q != nullptr) {
        *p = 10;
        *q = 10;
        p = get_random_ptr(&_Mut a);
        q = get_random_ptr(&_Mut a);
    }
    *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    *q = 20; // expected-error {{nullable pointer cannot be dereferenced}}
}

struct S {
    int a;
};
_Safe struct S *_Borrow _Nullable get_random_ptr_S(int* _Borrow p);
_Safe void test6(void) {
    int a = 10;
    struct S *_Borrow _Nullable p = nullptr;
    while (p == nullptr) {
        p = get_random_ptr_S(&_Mut a);
    }
    p->a = 20;
}

_Safe void test7(void) {
    int a = 10;
    struct S *_Borrow _Nullable p = get_random_ptr_S(&_Mut a);
    while (p != nullptr) {
        p->a = 10;
        p = get_random_ptr_S(&_Mut a);
    }
    p->a = 20;  // expected-error {{cannot access member through nullable pointer}}
}

_Safe void test8(void) {
    int a = 10;
    int *_Borrow _Nullable p = get_random_ptr(&_Mut a);
    while (p) {
        *p = 10;
        p = get_random_ptr(&_Mut a);
    }
    *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test9(void) {
    int a = 10;
    int *_Borrow _Nullable p = nullptr;
    while ((p = get_random_ptr(&_Mut a)) != nullptr) {
        *p = 10;
    }
    *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test10(void) {
    int a = 10;
    int *_Borrow _Nullable p = nullptr;
    while ((p = get_random_ptr(&_Mut a)) == nullptr) {
    }
    *p = 20;
}

_Safe void test11(void) {
    int a = 10;
    int x = 0;
    int *_Borrow _Nullable p = get_random_ptr(&_Mut a);
    while (++x, p) {
        *p = 10;
        p = get_random_ptr(&_Mut a);
    }
    *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test12(void) {
    int a = 10;
    int x = 0;
    int *_Borrow _Nullable p = get_random_ptr(&_Mut a);
    while (++x, p != nullptr) {
        *p = 10;
        p = get_random_ptr(&_Mut a);
    }
    *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test13(void) {
    int a = 10;
    int x = 0;
    int *_Borrow _Nullable p = get_random_ptr(&_Mut a);
    while (++x, ++x, p) {
        *p = 10;
        p = get_random_ptr(&_Mut a);
    }
    *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test14(void) {
    int a = 10;
    int x = 0;
    int *_Borrow _Nullable p = get_random_ptr(&_Mut a);
    while (++x, ++x, p != nullptr) {
        *p = 10;
        p = get_random_ptr(&_Mut a);
    }
    *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
}